# vrep_jaco

./: .gitignore  README.md  README_old.md  Trial_and_Error.txt  bug.txt  requirements.txt  vrep_jaco.rosinstall
env_client/: CMakeLists.txt  package.xml  setup.py  vrep_jaco.rosinstall
env_client/launch/: env_client.launch
env_client/scripts/: ActionServer_mod.py  env_client.py  env_client_j2.py
env_client/scripts/vrep_env/: vrep_env.py
jaco_controller_integrated/: CMakeLists.txt  CMakeLists_mod.txt  CMakeLists_old.txt  package.xml
jaco_controller_integrated/include/: jaco_controller_integrated.h  jaco_controller_integrated_jog.h  low_pass_filter.h
jaco_controller_integrated/launch/: jaco_controller_integrated.launch  move_group_only.launch
jaco_controller_integrated/src/: jaco_controller_integrated copy.cpp  jaco_controller_integrated.cpp  jaco_controller_integrated_jog.cpp  jaco_controller_integrated_old.cpp  low_pass_filter.cpp
keyboard_input/: CMakeLists.txt  package.xml  setup.py
keyboard_input/launch/: keyboard_input.launch
keyboard_input/scripts/: keyboard_input.py  keyboard_input_2.py
rl_controller/: CMakeLists.txt  logslog.txt  package.xml  setup.py
rl_controller/launch/: cip_test.launch  data_collector.launch  rl_controller.launch
rl_controller/logs/: log.txt
rl_controller/scripts/: argparser.py  brain.py  cip_test.py  data_collector.py  env_real.py  env_vrep.py  main_example.py  rl_controller.py  rl_controller_mod.py  rl_controller_script.py  rl_controller_script_baseline.py  rl_controller_test.py  state_generator.py  testimg.py  trainer.py  trpo.py  trpotrainer.py  vae_train_test.py  vae_util.py  yolo.py
rl_controller/scripts/algo/: brain.py  logger.py  runningstat.py  trainer.py  trpo.py  trpotrainer.py
rl_controller/scripts/cip_data/: docker.sh  gqcnn.py
rl_controller/scripts/cip_data/sample/: ham2_nip_snap_depth_0.npy
rl_controller/scripts/darknet/cfg/: coco.data
rl_controller/scripts/env/: SimpleActionServer_mod.py  env_real.py  env_test.py  env_util_test.py  env_vrep copy.py  env_vrep.py  env_vrep_api.py  env_vrep_api_util.py  env_vrep_client.py  env_vrep_client_test.py  env_vrep_pyrep.py  env_vrep_pyrep_util.py  env_vrep_util.py  env_vrep_util_legacy.py  environment.py
rl_controller/scripts/env/assets/: jaco.py
rl_controller/scripts/env/vrep_env/: __init__.py
rl_controller/scripts/env/vrep_env_rl/: vrep_env.py
rl_controller/scripts/film/: film_gen.py
rl_controller/scripts/state_gen/: config.py  data_preprocessing.py  mVAE.py  preprocessing.py  state_gen_util.py  state_generator.py  vae_train_test.py  vae_train_test_keras.py  vae_train_test_keras_film.py
rl_controller/scripts/state_gen/logs/fit/20200520-083401/: events.out.tfevents.1589931248.dualarm-server.v2  events.out.tfevents.1589931252.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200520-091005/: events.out.tfevents.1589933412.dualarm-server.v2  events.out.tfevents.1589933416.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200801-161717/: events.out.tfevents.1596266266.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200801-173134/: events.out.tfevents.1596270745.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200803-201030/: events.out.tfevents.1596453082.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200805-131407/: events.out.tfevents.1596600906.dualarm-server.v2  events.out.tfevents.1596600915.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200807-195414/: events.out.tfevents.1596797719.dualarm-server.v2  events.out.tfevents.1596797735.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200807-201053/: events.out.tfevents.1596798714.dualarm-server.v2  events.out.tfevents.1596798731.dualarm-server.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200822-142542/: events.out.tfevents.1598073967.han811-17UD70N-PX76K.v2  events.out.tfevents.1598073976.han811-17UD70N-PX76K.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200822-191300/: events.out.tfevents.1598091213.han811-17UD70N-PX76K.v2
rl_controller/scripts/state_gen/logs/fit/20200822-191511/: events.out.tfevents.1598091343.han811-17UD70N-PX76K.v2
rl_controller/scripts/state_gen/logs/fit/20200822-191727/: events.out.tfevents.1598091479.han811-17UD70N-PX76K.v2
rl_controller/scripts/state_gen/logs/fit/20200822-191852/: events.out.tfevents.1598091564.han811-17UD70N-PX76K.v2
rl_controller/scripts/state_gen/logs/fit/20200822-192230/: events.out.tfevents.1598091782.han811-17UD70N-PX76K.v2
rl_controller/scripts/state_gen/logs/fit/20200822-192515/: events.out.tfevents.1598091947.han811-17UD70N-PX76K.v2
rl_controller/scripts/state_gen/logs/fit/20200822-192622/: events.out.tfevents.1598092014.han811-17UD70N-PX76K.v2  events.out.tfevents.1598092021.han811-17UD70N-PX76K.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200822-192746/: events.out.tfevents.1598092097.han811-17UD70N-PX76K.v2  events.out.tfevents.1598092105.han811-17UD70N-PX76K.profile-empty
rl_controller/scripts/state_gen/logs/fit/20200822-194315/: events.out.tfevents.1598093027.han811-17UD70N-PX76K.v2  events.out.tfevents.1598093036.han811-17UD70N-PX76K.profile-empty
rl_controller/scripts/state_gen/logss/20200801-162529/: events.out.tfevents.1596266758.dualarm-server.profile-empty
rl_controller/scripts/state_gen/state_gen/: config.py
src/vrep_jaco_data/: CMakeLists.txt
src/vrep_jaco_data/launch/: vrep_jaco_data.launch
src/vrep_jaco_data/scripts/: vae_train.py  vae_util.py  vrep_jaco_data.py
vrep_jaco_data/: package.xml  setup.py
vrep_jaco_data/data/: preprocessing.ipynb  preprocessing.py  test.py
vrep_jaco_data/data/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  preprocessing-checkpoint.ipynb
vrep_jaco_data/scripts/: test.py  vae_train_test.py  vae_util_keras.py  vrep_jaco_data.py  yolo.py
vrep_jaco_data/scripts/darknet/: Makefile  darknet
vrep_jaco_data/scripts/darknet/cfg/: coco.data
(+170 files in other folders)
